# atlas

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  dump.rdb  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_imp_baseline.py  0001_initial.py  0002_correlation.py  0002_mimir_cache.py  0003_drop_rule_catalog.py  0003_notifications.py  0004_incident_suppression.py  0004_notif_incident_nullable.py  0005_multi_tenancy.py  0005_per_group_channels.py  0006_group_labels.py  0006_partitioning.py  0007_mimir_query_config.py  0007_notification_scale.py  0008_pending_softcap.py  0008_saml_config.py  0009_llm_and_search.py  0009_saml_user_fields.py  0010_notification_mute.py  0011_threshold_overrides.py  0012_imp_schema.py  0013_imp_correlated.py  0014_imp_notify.py
backend/app/: db.py  main.py
backend/app/core/: config.py  deps.py  envelope.py  instruments.py  locks.py  metrics.py  pagination.py  rate_limit.py  security.py  tenancy.py  visibility.py
backend/app/integrations/: base.py  (+5 more)
backend/loadtest/: common.py  correlation_lag.py  fanout_storm.py  ingest_load.py  llm_stub.py  query_bench.py  seed_events.py  storm.py  telegram_stub.py
backend/scripts/: create_admin.py  pg_concurrency_test.sh  seed_demo.py  seed_ui_stress.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_imp_ingest_denorm.py  test_imp_schema.py  test_integrations.py  test_notifications.py  test_rules.py  test_servers.py  test_stage8_admin.py  test_sync.py  test_users_groups.py  world_fixtures.py
(+304 files in other folders)
