[project]
name = "atlas-backend"
version = "0.1.0"
description = "Observability Alert Management Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.9",
    "python3-saml>=1.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.black]
line-length = 100
target-version = ["py312"]
